Refine and rework single client interface * add Log4J2 logging configuration * add deploy/destroy scripts * add fallback factory impl * still trying to diagnose "reactor.netty.http.client.PrematureCloseException: Connection prematurely closed BEFORE response"

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,21 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,httptrace,loggers,metrics,prometheus
+  endpoint:
+    health:
+      show-details: always
+  info:
+    git:
+      mode: full
+
+---
+spring:
+  profiles: cloud
+
+management:
+  cloudfoundry:
+    enabled: true
+    skip-ssl-validation: true
 
