--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ gitProperties {
 }
 
 group = 'io.pivotal'
-version = '0.0.1-SNAPSHOT'
+version = '0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
@@ -56,6 +56,7 @@ dependencies {
 	implementation('com.playtika.reactivefeign:feign-reactor-spring-configuration:1.0.28')
 	implementation('com.vaadin:vaadin-spring-boot-starter')
 	implementation('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
+	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	implementation('io.micrometer:micrometer-registry-prometheus')
     testImplementation('io.projectreactor:reactor-test')
