--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,13 @@ configurations {
     implementation.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
 }
 
+test {
+	useJUnitPlatform()
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
+}
+
 dependencies {
 	annotationProcessor('org.projectlombok:lombok:1.18.6')
     implementation('org.projectlombok:lombok:1.18.6')
