--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.springframework.boot' version '2.1.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
     id 'java'
-    id 'com.devsoap.vaadin-flow' version '1.1.1'
 }
 
 gitProperties {
@@ -22,8 +21,7 @@ repositories {
 ext {
 	set('springCloudServicesVersion', '2.1.2.RELEASE')
 	set('springCloudVersion', 'Greenwich.SR1')
-	set('vaadinVersion', '10.0.13') // LTS
-	//set('vaadinVersion', '13.0.4')
+	set('commons-lang3.version', '3.9')
 	set('jackson.version', '2.9.8')
 	set('junit-jupiter.version', '5.4.2')
 	set('mockito.version', '2.27.0')
@@ -31,7 +29,6 @@ ext {
 
 dependencyManagement {
 	imports {
-		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
 		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServicesVersion}"
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
@@ -56,13 +53,14 @@ test {
 dependencies {
 	annotationProcessor('org.projectlombok:lombok:1.18.6')
     implementation('org.projectlombok:lombok:1.18.6')
+	implementation('org.apache.commons:commons-lang3')
+	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('com.playtika.reactivefeign:feign-reactor-cloud:1.0.28')
 	//implementation('com.playtika.reactivefeign:feign-reactor-java11:1.0.28')
 	implementation('com.playtika.reactivefeign:feign-reactor-webclient:1.0.28')
 	implementation('com.playtika.reactivefeign:feign-reactor-spring-configuration:1.0.28')
-	implementation('com.vaadin:vaadin-spring-boot-starter')
 	implementation('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
