--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id 'com.gorylenko.gradle-git-properties' version '2.0.0'
     id 'org.springframework.boot' version '2.1.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
-    id 'java'
+    id 'com.devsoap.vaadin-flow' version '1.1.1'
+	id 'java'
 }
 
 gitProperties {
@@ -15,6 +16,7 @@ version = '0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
+	vaadin.repositories()
 	mavenCentral()
 }
 
@@ -25,12 +27,15 @@ ext {
 	set('jackson.version', '2.9.8')
 	set('junit-jupiter.version', '5.4.2')
 	set('mockito.version', '2.27.0')
+	set('resilience4jVersion', '0.14.1')
+	set('vaadinVersion', '13.0.4')
 }
 
 dependencyManagement {
 	imports {
-		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServicesVersion}"
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServicesVersion}"
+		mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
 	}
 }
 
@@ -40,6 +45,7 @@ bootRun {
 }
 
 configurations {
+	// exclude Logback
     implementation.exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
 }
 
@@ -52,25 +58,27 @@ test {
 
 dependencies {
 	annotationProcessor('org.projectlombok:lombok:1.18.6')
-    implementation('org.projectlombok:lombok:1.18.6')
+	implementation('org.projectlombok:lombok:1.18.6')
 	implementation('org.apache.commons:commons-lang3')
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
-	implementation('org.springframework.boot:spring-boot-starter-webflux')
-	implementation('org.springframework.boot:spring-boot-starter-security')
-	implementation('com.playtika.reactivefeign:feign-reactor-cloud:1.0.28')
-	//implementation('com.playtika.reactivefeign:feign-reactor-java11:1.0.28')
-	implementation('com.playtika.reactivefeign:feign-reactor-webclient:1.0.28')
-	implementation('com.playtika.reactivefeign:feign-reactor-spring-configuration:1.0.28')
-	implementation('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
-	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
+	implementation('org.springframework.boot:spring-boot-starter-log4j2')
+	implementation('org.springframework.boot:spring-boot-starter-security')
+	implementation('org.springframework.boot:spring-boot-starter-webflux')
+	implementation vaadin.bom()
+    implementation vaadin.platform()
+	implementation('com.vaadin:vaadin-spring-boot-starter')
+	implementation('org.springframework.cloud:spring-cloud-loadbalancer')
+	implementation("io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}")
+	implementation("io.github.resilience4j:resilience4j-reactor:${resilience4jVersion}")
+	implementation('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	implementation('io.micrometer:micrometer-registry-prometheus')
-    testImplementation('io.projectreactor:reactor-test')
-    testImplementation('org.junit.jupiter:junit-jupiter-api')
-    testImplementation('org.junit.jupiter:junit-jupiter-params')
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
-    testImplementation('org.mockito:mockito-core')
-    testImplementation('org.mockito:mockito-junit-jupiter')
+	testImplementation('io.projectreactor:reactor-test')
+	testImplementation('org.junit.jupiter:junit-jupiter-api')
+	testImplementation('org.junit.jupiter:junit-jupiter-params')
+	testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
+	testImplementation('org.mockito:mockito-core')
+	testImplementation('org.mockito:mockito-junit-jupiter')
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'junit', module: 'junit'
 	}
