Updates in support of rendering snapshot reports

--- a/manifest.yml
+++ b/manifest.yml
@@ -7,6 +7,7 @@ applications:
   path: build/libs/cf-hoover-ui-0.1-SNAPSHOT.jar
   instances: 1
   env:
+    CRON_ENABLED: true
     JAVA_OPTS: -Djava.security.egd=file:///dev/urandom
     SPRING_PROFILES_ACTIVE: cloud
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
