--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ ext {
 	set('commons-lang3.version', '3.9')
 	set('jackson.version', '2.9.8')
 	set('junit-jupiter.version', '5.4.2')
+	set('lombok.version', '1.18.6')
 	set('mockito.version', '2.27.0')
 	set('resilience4jVersion', '0.14.1')
 	set('vaadinVersion', '13.0.4')
@@ -57,8 +58,8 @@ test {
 }
 
 dependencies {
-	annotationProcessor('org.projectlombok:lombok:1.18.6')
-	implementation('org.projectlombok:lombok:1.18.6')
+	annotationProcessor('org.projectlombok:lombok')
+	implementation('org.projectlombok:lombok')
 	implementation('org.apache.commons:commons-lang3')
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
