--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,3 +1,8 @@
 spring:
   application:
     name: cf-hoover-ui
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${vcap.services.hooverRegistry.credentials.uri:http://localhost:8761}/eureka/
