--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,31 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
     id 'com.devsoap.vaadin-flow' version '1.1.1'
 	id 'java'
+	id 'com.github.spotbugs' version '1.7.1'
 }
 
 gitProperties {
     dateFormat = "yyyy-MM-dd'T'HH:mmZ"
     dateFormatTimeZone = "UTC"
+}
+
+spotbugs {
+    toolVersion = '4.0.0-beta1'
+    ignoreFailures = true
+    effort = 'max'
+    reportLevel = 'low'
+    showProgress = true
+}
+
+tasks.withType(com.github.spotbugs.SpotBugsTask) {
+    reports {
+        html {
+            enabled = true
+        }
+        xml {
+            enabled = false
+        }
+    }
 }
 
 group = 'io.pivotal'
