--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.gorylenko.gradle-git-properties' version '2.0.0'
     id 'org.springframework.boot' version '2.1.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
-    id 'com.devsoap.vaadin-flow' version '1.1.1'
+    id 'com.devsoap.vaadin-flow' version '1.1.2'
 	id 'java'
 	id 'com.github.spotbugs' version '1.7.1'
 }
@@ -49,7 +49,7 @@ ext {
 	set('lombok.version', '1.18.6')
 	set('mockito.version', '2.27.0')
 	set('resilience4jVersion', '0.14.1')
-	set('vaadinVersion', '13.0.4')
+	set('vaadinVersion', '13.0.6')
 }
 
 dependencyManagement {
@@ -86,6 +86,8 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
+	implementation('io.projectreactor:reactor-core:3.2.9.RELEASE')
+    implementation('io.projectreactor.netty:reactor-netty:0.8.7.RELEASE')
 	implementation vaadin.bom()
     implementation vaadin.platform()
 	implementation('com.vaadin:vaadin-spring-boot-starter')
