--- a/build.gradle
+++ b/build.gradle
@@ -87,10 +87,12 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
 	implementation('io.projectreactor:reactor-core:3.2.9.RELEASE')
-        implementation('io.projectreactor.netty:reactor-netty:0.8.8.RELEASE')
+    implementation('io.projectreactor.netty:reactor-netty:0.8.8.RELEASE')
 	implementation vaadin.bom()
-        implementation vaadin.platform()
+    implementation vaadin.platform()
 	implementation('com.vaadin:vaadin-spring-boot-starter')
+	implementation('com.github.appreciated:apexcharts:0.8.0')
+	implementation('com.github.appreciated:app-layout-addon:3.0.0.beta5')
 	implementation('org.springframework.cloud:spring-cloud-loadbalancer')
 	implementation("io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}")
 	implementation("io.github.resilience4j:resilience4j-reactor:${resilience4jVersion}")
