Refactor UI * Swap dependency on layout library to just use built-in VaadinFlow layout * Move all *View to view sub-package * Move Tile and GridTile to component sub-package * Add Demographics view * Add HomeView

--- a/build.gradle
+++ b/build.gradle
@@ -91,8 +91,7 @@ dependencies {
 	implementation vaadin.bom()
     implementation vaadin.platform()
 	implementation('com.vaadin:vaadin-spring-boot-starter')
-	implementation('com.github.appreciated:apexcharts:0.8.0')
-	implementation('com.github.appreciated:app-layout-addon:3.0.0.beta5')
+	//implementation('com.github.appreciated:apexcharts:0.8.0')
 	implementation('org.springframework.cloud:spring-cloud-loadbalancer')
 	implementation("io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}")
 	implementation("io.github.resilience4j:resilience4j-reactor:${resilience4jVersion}")
