--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.devsoap.vaadin-flow' version '1.2'
 	id 'java'
+	id 'maven-publish'
 	id 'com.github.spotbugs' version '2.0.0'
 }
 
