--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,13 @@
 pluginManagement {
-	repositories {
-		gradlePluginPortal()
-	}
+  repositories {
+    gradlePluginPortal()
+  }
+  resolutionStrategy {
+    eachPlugin {
+      if (requested.id.id == 'org.springframework.boot') {
+        useModule("org.springframework.boot:spring-boot-gradle-plugin:${requested.version}")
+      }
+    }
+  }
 }
 rootProject.name = 'cf-hoover-ui'
