Reset the cron collection schedule to fire on the half hour each hour daily

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,8 @@ management:
       mode: full
 
 cron:
-  collection: "0 0 1 * * *"
+  # each :30 on the hour
+  collection: "0 30 * * * *"
 
 ---
 spring:
