--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.gorylenko.gradle-git-properties' version '2.0.0'
-    id 'org.springframework.boot' version '2.2.0.M4'
+    id 'com.gorylenko.gradle-git-properties' version '2.1.0'
+    id 'org.springframework.boot' version '2.2.0.M6'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.devsoap.vaadin-flow' version '1.2'
 	id 'java'
@@ -38,15 +38,17 @@ sourceCompatibility = JavaVersion.VERSION_11
 repositories {
 	vaadin.repositories()
 	mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+	maven { url "https://repo.spring.io/milestone" }
 }
 
 ext {
-	set('springCloudServicesVersion', '2.1.3.RELEASE')
+	set('springCloudServicesVersion', '2.1.4.RELEASE')
 	set('springCloudVersion', 'Hoxton.M1')
-	set('spring-cloud-services-connectors.version', '2.1.3.RELEASE')
-    set('spring-framework.version', '5.2.0.BUILD-SNAPSHOT')
-	set('resilience4jVersion', '0.15.0')
-	set('vaadinVersion', '13.0.11')
+	set('spring-cloud-services-connectors.version', '2.1.4.RELEASE')
+    set('spring-framework.version', '5.2.0.RC1')
+	set('resilience4jVersion', '0.17.0')
+	set('vaadinVersion', '13.0.13')
 }
 
 dependencyManagement {
@@ -87,8 +89,8 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
-	implementation('io.projectreactor:reactor-core:3.3.0.M1')
-    implementation('io.projectreactor.netty:reactor-netty:0.9.0.M2')
+	implementation('io.projectreactor:reactor-core:3.3.0.RC1')
+    implementation('io.projectreactor.netty:reactor-netty:0.9.0.RC1')
 	implementation vaadin.bom()
     implementation vaadin.platform()
 	implementation('com.vaadin:vaadin-spring-boot-starter')
