Upgrade to Spring Boot 2.2.0.M6 (#26)
* Spring to 5.2.0.RC1
* Spring Boot 2.2.0.M6
* Spring Cloud to Hoxton.M2
* Spring Data Release Train to Moore-RC3
* Reslience4j 0.17.0
* Vaadin 13.0.13
* Reactor Core 3.3.0.RC1
* Reactor Netty 0.9.0.RC1
* Git properties plugin to 2.2.0
* Remove spring-cloud-loadbalancer (favor Ribbon)

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'com.gorylenko.gradle-git-properties' version '2.1.0'
-    id 'org.springframework.boot' version '2.1.6.RELEASE'
+    id 'com.gorylenko.gradle-git-properties' version '2.2.0'
+    id 'org.springframework.boot' version '2.2.0.M6'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.github.ben-manes.versions' version '0.22.0'
     id 'com.devsoap.vaadin-flow' version '1.2'
     id 'io.franzbecker.gradle-lombok' version '3.1.0'
-	id 'java'
+	  id 'java'
     id 'jacoco'
     id 'maven-publish'
     id 'com.github.spotbugs' version '2.0.0'
@@ -50,21 +50,22 @@ task javadocJar(type: Jar) {
 }
 
 repositories {
-	mavenCentral()
-	maven { url 'https://maven.vaadin.com/vaadin-prereleases'}
+	  mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+	  maven { url "https://repo.spring.io/milestone" }
+	  maven { url 'https://maven.vaadin.com/vaadin-prereleases'}
     maven { url 'http://maven.vaadin.com/vaadin-addons'}
 }
 
 ext {
-	set('springCloudServicesVersion', '2.1.4.RELEASE')
-	set('springCloudVersion', 'Greenwich.SR1')
-	set('commons-lang3.version', '3.9')
-	set('jackson.version', '2.9.9')
-	set('junit-jupiter.version', '5.4.2')
-	set('lombok.version', '1.18.8')
-	set('mockito.version', '2.27.0')
-	set('resilience4jVersion', '0.15.0')
-	set('vaadin.version', '14.0.0')
+	  set('springCloudServicesVersion', '2.1.4.RELEASE')
+	  set('springCloudVersion', 'Hoxton.M2')
+	  set('spring-cloud-services-connectors.version', '2.1.4.RELEASE')
+    set('spring-framework.version', '5.2.0.RC2')
+	  // @see https://github.com/spring-projects/spring-boot/blob/master/spring-boot-project/spring-boot-dependencies/pom.xml
+    set('spring-data-releasetrain.version', 'Moore-RC3')
+	  set('resilience4jVersion', '0.17.0')
+	  set('vaadinVersion', '13.0.13')
 }
 
 dependencyManagement {
@@ -117,11 +118,13 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
-	implementation('io.projectreactor:reactor-core:3.2.10.RELEASE')
-    implementation('io.projectreactor.netty:reactor-netty:0.8.9.RELEASE')
-    implementation('com.vaadin:vaadin-spring-boot-starter')
+	implementation('io.projectreactor:reactor-core:3.3.0.RC1')
+  implementation('io.projectreactor.netty:reactor-netty:0.9.0.RC1')
+	implementation vaadin.bom()
+  implementation vaadin.platform()
+	implementation('com.vaadin:vaadin-spring-boot-starter')
 	//implementation('com.github.appreciated:apexcharts:0.8.0')
-	implementation('org.springframework.cloud:spring-cloud-loadbalancer')
+	//implementation('org.springframework.cloud:spring-cloud-loadbalancer')
 	implementation("io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}")
 	implementation("io.github.resilience4j:resilience4j-reactor:${resilience4jVersion}")
 	implementation('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
