--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,8 @@ pluginManagement {
   repositories {
     maven { url 'https://repo.spring.io/snapshot' }
     maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://maven.vaadin.com/vaadin-prereleases'}
+    maven { url 'http://maven.vaadin.com/vaadin-addons'}
     gradlePluginPortal()
   }
   resolutionStrategy {
