--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 plugins {
     id 'com.gorylenko.gradle-git-properties' version '2.2.0'
-    id 'org.springframework.boot' version '2.2.0.M6'
+    id 'org.springframework.boot' version '2.2.0.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'com.github.ben-manes.versions' version '0.22.0'
     id 'com.devsoap.vaadin-flow' version '1.2'
     id 'io.franzbecker.gradle-lombok' version '3.2.0'
 	id 'java'
     id 'jacoco'
+    id 'com.google.cloud.tools.jib' version '1.7.0'
     id 'maven-publish'
     id 'com.github.spotbugs' version '2.0.0'
 }
@@ -59,13 +60,13 @@ repositories {
 
 ext {
 	  set('springCloudServicesVersion', '2.1.4.RELEASE')
-	  set('springCloudVersion', 'Hoxton.M2')
+	  set('springCloudVersion', 'Hoxton.M3')
 	  set('spring-cloud-services-connectors.version', '2.1.4.RELEASE')
-      set('spring-framework.version', '5.2.0.RC2')
+      set('spring-framework.version', '5.2.0.RELEASE')
 	  // @see https://github.com/spring-projects/spring-boot/blob/master/spring-boot-project/spring-boot-dependencies/pom.xml
-      set('spring-data-releasetrain.version', 'Moore-RC3')
-	  set('resilience4jVersion', '0.17.0')
+      set('spring-data-releasetrain.version', 'Moore-RELEASE')
 	  set('vaadinVersion', '13.0.13')
+      set('resilience4j.version', '1.1.0')
 }
 
 dependencyManagement {
@@ -118,15 +119,14 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
-	implementation('io.projectreactor:reactor-core:3.3.0.RC1')
-    implementation('io.projectreactor.netty:reactor-netty:0.9.0.RC1')
+	implementation('io.projectreactor:reactor-core:3.3.0.RELEASE')
+    implementation('io.projectreactor.netty:reactor-netty:0.9.0.RELEASE')
 	implementation vaadin.bom()
     implementation vaadin.platform()
 	implementation('com.vaadin:vaadin-spring-boot-starter')
 	//implementation('com.github.appreciated:apexcharts:0.8.0')
-	//implementation('org.springframework.cloud:spring-cloud-loadbalancer')
-	implementation("io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}")
-	implementation("io.github.resilience4j:resilience4j-reactor:${resilience4jVersion}")
+	implementation('org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j')
+    implementation('io.github.resilience4j:resilience4j-annotations:1.1.0')
 	implementation('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	implementation('io.micrometer:micrometer-registry-prometheus')
 	testImplementation('io.projectreactor:reactor-test')
