--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.gorylenko.gradle-git-properties' version '2.2.0'
     id 'org.springframework.boot' version '2.2.0.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-    id 'com.github.ben-manes.versions' version '0.22.0'
+    id 'com.github.ben-manes.versions' version '0.27.0'
     id 'com.devsoap.vaadin-flow' version '1.2'
     id 'io.franzbecker.gradle-lombok' version '3.2.0'
 	id 'java'
@@ -99,7 +99,7 @@ test {
 }
 
 jacoco {
-	toolVersion = "0.8.4"
+	toolVersion = "0.8.5"
 }
 
 jacocoTestReport {
@@ -205,4 +205,4 @@ javadoc {
     }
 }
 
-check.dependsOn jacocoTestReport, publishToMavenLocal
+check.dependsOn jacocoTestReport
