--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
     id 'jacoco'
     id 'com.google.cloud.tools.jib' version '2.1.0'
     id 'maven-publish'
-    id 'com.github.spotbugs' version '4.0.1'
+    id 'com.github.spotbugs' version '4.0.2'
 }
 
 gitProperties {
@@ -38,6 +38,11 @@ spotbugsMain {
     }
 }
 
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
 jacoco {
 	toolVersion = "0.8.5"
 }
@@ -56,9 +61,9 @@ vaadin {
 }
 
 node {
-  version = '12.12.0'
-  npmVersion = '6.13.0'
-  yarnVersion = '1.19.1'
+  version = '13.10.0'
+  npmVersion = '6.13.7'
+  yarnVersion = '1.22.4'
   distBaseUrl = 'https://nodejs.org/dist'
   download = true
   workDir = file("${project.buildDir}/nodejs")
@@ -72,21 +77,11 @@ group = 'io.pivotal'
 version = '0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_11
 
-task sourcesJar(type: Jar) {
-    from sourceSets.main.allJava
-    archiveClassifier = 'sources'
-}
-
-task javadocJar(type: Jar) {
-    from javadoc
-    archiveClassifier = 'javadoc'
-}
-
 repositories {
 	mavenCentral()
     maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
-	vaadin.repositories()
+	//vaadin.repositories()
 }
 
 ext {
@@ -139,7 +134,6 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
 	implementation('io.projectreactor:reactor-core:3.3.3.RELEASE')
     implementation('io.projectreactor.netty:reactor-netty:0.9.5.RELEASE')
-	implementation vaadin.bom()
     implementation vaadin.core()
 	implementation('com.vaadin:vaadin-spring-boot-starter')
 	//implementation('com.github.appreciated:apexcharts:0.8.0')
@@ -160,10 +154,8 @@ dependencies {
 
 publishing {
     publications {
-        maven(MavenPublication) {
+        mavenJava(MavenPublication) {
             from components.java
-            artifact sourcesJar
-            artifact javadocJar
             versionMapping {
                 usage('java-api') {
                     fromResolutionOf('runtimeClasspath')
@@ -172,8 +164,6 @@ publishing {
                     fromResolutionResult()
                 }
             }
-        }
-        mavenJava(MavenPublication) {
             pom {
                 name = 'cf-hoover-ui'
                 url = 'https://github.com/pacphi/cf-hoover-ui'
@@ -196,6 +186,14 @@ publishing {
                     url = 'https://github.com/pacphi/cf-hoover-ui'
                 }
             }
+        }
+    }
+    repositories {
+        maven {
+            // change URLs to point to your repos, e.g. http://my.org/repo
+            def releasesRepoUrl = "$buildDir/repos/releases"
+            def snapshotsRepoUrl = "$buildDir/repos/snapshots"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
         }
     }
 }
@@ -227,5 +225,4 @@ bootJar.enabled = true
 jar.enabled = false
 
 test.finalizedBy jacocoTestReport
-check.finalizedBy spotbugsMain
 build.finalizedBy publishToMavenLocal
