--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.gorylenko.gradle-git-properties' version '2.2.2'
-    id 'org.springframework.boot' version '2.2.5.RELEASE'
+    id 'org.springframework.boot' version '2.3.0.M2'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'com.github.ben-manes.versions' version '0.28.0'
     id 'com.devsoap.vaadin-flow' version '1.3.5'
@@ -225,4 +225,4 @@ bootJar.enabled = true
 jar.enabled = false
 
 test.finalizedBy jacocoTestReport
-build.finalizedBy publishToMavenLocal
+build.finalizedBy publishToMavenLocal, bootBuildImage
