--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
-    id 'com.gorylenko.gradle-git-properties' version '2.2.3'
-    id 'org.springframework.boot' version '2.3.3.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
+    id 'com.gorylenko.gradle-git-properties' version '2.2.4'
+    id 'org.springframework.boot' version '2.4.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'com.github.ben-manes.versions' version '0.36.0'
     id 'com.devsoap.vaadin-flow' version '1.3.5'
     id 'io.franzbecker.gradle-lombok' version '4.0.0'
 	id 'java'
     id 'jacoco'
-    id 'com.google.cloud.tools.jib' version '2.7.0'
+    id 'com.google.cloud.tools.jib' version '2.7.1'
     id 'maven-publish'
     id 'com.github.spotbugs' version '4.6.0'
 }
@@ -44,7 +44,7 @@ java {
 }
 
 jacoco {
-	toolVersion = "0.8.5"
+	toolVersion = "0.8.6"
 }
 
 jacocoTestReport {
@@ -86,11 +86,11 @@ repositories {
 
 ext {
 	  set('springCloudServicesVersion', '3.1.2.RELEASE')
-	  set('springCloudVersion', "2020.0.0-M2")
+	  set('springCloudVersion', "2020.0.0")
 	  set('spring-cloud-services-connectors.version', '3.1.2.RELEASE')
 	  // @see https://github.com/spring-projects/spring-boot/blob/master/spring-boot-project/spring-boot-dependencies/pom.xml
       set('spring-data-releasetrain.version', 'Neumann-RELEASE')
-      set('resilience4j.version', '1.5.0')
+      set('resilience4j.version', '1.6.1')
 }
 
 dependencyManagement {
@@ -132,13 +132,13 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-log4j2')
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-webflux')
-	implementation('io.projectreactor:reactor-core:3.3.9.RELEASE')
-    implementation('io.projectreactor.netty:reactor-netty:0.9.11.RELEASE')
+	implementation('io.projectreactor:reactor-core:3.4.2')
+    implementation('io.projectreactor.netty:reactor-netty:1.0.3')
     implementation vaadin.core()
 	implementation('com.vaadin:vaadin-spring-boot-starter')
 	//implementation('com.github.appreciated:apexcharts:0.8.0')
 	implementation('org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j')
-    implementation('io.github.resilience4j:resilience4j-annotations:1.5.0')
+    implementation('io.github.resilience4j:resilience4j-annotations:1.6.1')
 	implementation('io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry')
 	implementation('io.micrometer:micrometer-registry-prometheus')
 	testImplementation('io.projectreactor:reactor-test')
