--- a/src/test/resources/bootstrap.yml
+++ b/src/test/resources/bootstrap.yml
@@ -1,10 +1,22 @@
 spring:
   application:
     name: cf-hoover-ui
+  cloud:
+    discovery:
+      enabled: false
+      client:
+        health-indicator:
+          enabled: false
+        composite-indicator:
+          enabled: false
 
 eureka:
   client:
     enabled: false
+    register-with-eureka: false
+    fetch-registry: false
+    healthcheck:
+      enabled: false
 
 ribbon:
   eureka:
