Update Vaadin from v13 to v18
* Update README
* Update Github Action and Travis-CI build config
* Convert Gradle build to Maven

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,13 @@ config/*.json
 config/application-*.yml
 src/main/resources/application-*.yml
 
+## Maven
 target
+
+## Vaadin
+tsconfig.json
+types.d.ts
+webpack*
+package.json
+pnpm*
+node_modules/
