--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,19 @@
 spring:
+  application:
+    name: cf-hoover-ui
   codec:
     max-in-memory-size: 512000000
   cloud:
+    discovery:
+      enabled: false
     loadbalancer:
       ribbon:
         enabled: false
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${vcap.services.hooverRegistry.credentials.uri:http://localhost:8761}/eureka/
 
 management:
   endpoints:
@@ -24,7 +33,13 @@ cron:
 
 ---
 spring:
-  profiles: cloud
+  config:
+    activate:
+      on-profile: cloud
+
+  cloud:
+    discovery:
+      enabled: true
 
 management:
   cloudfoundry:
